--- a/server/views/index.html
+++ b/server/views/index.html
@@ -2,7 +2,7 @@
 <html ng-app="tollplazaApp">
 
 <head>
-  <title>Todo App</title>
+  <title>Tollplaza Application</title>
   <link rel="stylesheet" type="text/css" href="/lib/bootstrap/dist/css/bootstrap.min.css">
 
   <script type="text/javascript" src="/lib/angular/angular.min.js"></script>
